{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 23,
  "lineage": "a19c52fe-7d65-5a52-07ef-e584908180a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed828ae690ef8b35",
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:instance/i-0026daa13f821f480",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0026daa13f821f480",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08290e03740e1e585",
            "private_dns": "ip-10-123-1-59.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.1.59",
            "public_dns": "ec2-3-26-239-9.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.26.239.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06fb2e44b4b2cc862",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0645eca6a9da9432d",
            "tags": {
              "Name": "dev_node"
            },
            "tags_all": {
              "Name": "dev_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b605ac780405145"
            ]
          },
          "dependencies": [
            "aws_security_group.Terraform_project_Securitygroup",
            "aws_subnet.Terraform_project_subnet",
            "data.aws_ami.Terraform_project_webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Terraform_project_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:internet-gateway/igw-09891357a5e2574b6",
            "id": "igw-09891357a5e2574b6",
            "owner_id": "642655931180",
            "tags": {
              "Name": "Terraform_project_IG"
            },
            "tags_all": {
              "Name": "Terraform_project_IG"
            },
            "vpc_id": "vpc-0aa2dc0955d57e34d"
          },
          "dependencies": [
            "aws_vpc.Terraform_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Terraform_project_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:route-table/rtb-037c411f0af992bd7",
            "id": "rtb-037c411f0af992bd7",
            "owner_id": "642655931180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09891357a5e2574b6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Project_public_routetable"
            },
            "tags_all": {
              "Name": "Terraform_Project_public_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa2dc0955d57e34d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Terraform_project_IG",
            "aws_vpc.Terraform_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Terraform_project_RTassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a196a32197c9b6e",
            "route_table_id": "rtb-037c411f0af992bd7",
            "subnet_id": "subnet-0645eca6a9da9432d"
          },
          "dependencies": [
            "aws_internet_gateway.Terraform_project_IG",
            "aws_route_table.Terraform_project_routetable",
            "aws_subnet.Terraform_project_subnet",
            "aws_vpc.Terraform_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Terraform_project_Securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:security-group/sg-01b605ac780405145",
            "description": "Project security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b605ac780405145",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Terraform_project_Securitygroup",
            "name_prefix": "",
            "owner_id": "642655931180",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform_project_SG"
            },
            "tags_all": {
              "Name": "Terraform_project_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa2dc0955d57e34d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terraform_project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:subnet/subnet-0645eca6a9da9432d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0645eca6a9da9432d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "642655931180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_Project_public"
            },
            "tags_all": {
              "Name": "Terraform_Project_public"
            },
            "vpc_id": "vpc-0aa2dc0955d57e34d"
          },
          "dependencies": [
            "aws_vpc.Terraform_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:vpc/vpc-0aa2dc0955d57e34d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0be2f2d6f3b72a26d",
            "default_route_table_id": "rtb-002a62393b1f7fccd",
            "default_security_group_id": "sg-0bef89ed2586d020b",
            "dhcp_options_id": "dopt-02eb100148a88a4a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa2dc0955d57e34d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002a62393b1f7fccd",
            "owner_id": "642655931180",
            "tags": {
              "Name": "Development_environment"
            },
            "tags_all": {
              "Name": "Development_environment"
            }
          }
        }
      ]
    }
  ]
}